test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test "--coverage"

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/cis-scheduler-team-14/cis-scheduler-team-14/node_modules/react-dnd-html5-backend/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import { HTML5BackendImpl } from './HTML5BackendImpl.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

       8 | import { Semester, Season } from "./interfaces/semester";
       9 | import { DndProvider } from "react-dnd";
    > 10 | import { HTML5Backend } from "react-dnd-html5-backend";
         | ^
      11 | import { PlanTabs } from "./components/PlanTabs";
      12 | import { Add, HelpOutlined } from "@mui/icons-material";
      13 | import { Button } from "@mui/material";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/App.tsx:10:1)

-----------------------|---------|----------|---------|---------|-------------------
File                   | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------------------|---------|----------|---------|---------|-------------------
All files              |       0 |        0 |       0 |       0 |                   
 src                   |       0 |      100 |       0 |       0 |                   
  App.tsx              |       0 |      100 |       0 |       0 | 18-46             
 src/components        |       0 |        0 |       0 |       0 |                   
  AddPlanModal.tsx     |       0 |        0 |       0 |       0 | 20-65             
  AddSemesterModal.tsx |       0 |        0 |       0 |       0 | 21-84             
  Course.tsx           |       0 |      100 |       0 |       0 | 6-8               
  CourseFinder.tsx     |       0 |        0 |       0 |       0 | 16-124            
  CourseList.tsx       |       0 |        0 |       0 |       0 | 14-27             
  CourseView.tsx       |       0 |        0 |       0 |       0 | 18-64             
  DraggableCourse.tsx  |       0 |      100 |       0 |       0 | 5-32              
  EditCourseModal.tsx  |       0 |      100 |       0 |       0 | 19-155            
  PlanList.tsx         |       0 |      100 |       0 |       0 | 23-31             
  PlanTabs.tsx         |       0 |        0 |       0 |       0 | 20-84             
  PlanView.tsx         |       0 |        0 |       0 |       0 | 26-111            
  Semester.tsx         |       0 |      100 |       0 |       0 | 6-8               
  SemesterList.tsx     |       0 |      100 |       0 |       0 | 18-22             
  SemesterView.tsx     |       0 |        0 |       0 |       0 | 23-112            
 src/interfaces        |       0 |      100 |       0 |       0 |                   
  concentration.ts     |       0 |        0 |       0 |       0 |                   
  course.ts            |       0 |      100 |       0 |       0 | 25                
  plan.ts              |       0 |        0 |       0 |       0 |                   
  semester.ts          |       0 |        0 |       0 |       0 |                   
-----------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.085 s
Ran all test suites.
